configmap.ex2.yml

apiVersion: v1
kind: Pod
metadata: 
  name: nginx-pod
spec:
  volumes:
    - name: data-vol
      configMap:
        name: config-prod
  containers:
    - name: nginx-cont-prod
      image: nginx
      volumeMounts:
        - name: data-vol1
          mountPath: /usr/share/nginc/html/
