configmap.yml
kind: Pod 
apiVersion: v1 
metadata:
  name: cm-pod-ex1
  labels:
    env: prod 
spec:
  containers:
    - name: cm-pod-cont
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
          - name: my-vol1
            mountPath: /usr/share/nginx/html
  volumes:
    - name: my-vol1
      configMap:
        name: dev-html-configmap
