deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-pod
  labels:
    env: prod
spec:
  replicas: 4
  minReadySeconds: 30
  strategy: 
    type: RollingUpdate 
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1 
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      name: myapp
      labels:
        app: myapp
    spec: 
      containers:
        - name: myapp-cont-replicaset
          image: lerndevops/samplepyapp:v2
