livenessprob.yml
apiVersion: v1
kind: Pod
metadata:
  name: livenessprob
  labels:
     env: prod
spec:
  containers:
    - image: leaddevops/petclinic
      name: petclinic
      ports:
        - containerPort: 8080 
      readinessProbe:
        tcpSocket:
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 5
        timeoutSeconds: 3
      livenessProbe:
        httpGet:
           path: /petclinic
           port: 8080
