pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels: 
     app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
