secret2.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-ex-1
spec:
  containers:
    - name: redis
      image: redis
      volumeMounts:
        - name: myvol
          mountPath: "/apps/secrets"
  volumes:
    - name: myvol
      secret:
        secretName: db-secret
