sidecar.yml
apiVersion: v1
kind: Pod
metadata:
  name: sidecarpod
  labels:
    env: prod
spec:
  containers:
    - name: first-cont
      image: nginx
      volumeMounts:
        - name: html
          mountPath: /var/share/nginx/index.html
    - name: second-pod
      image: debian
      volumeMounts: 
        - name: html
          mountPath: /html
          command: ["/bin/sh", "-c"]
          args:
            - while true; do
              date >> /html/index.html;
              sleep 1;
            done
  volumes:
    - name: html
      emptyDir: {}
