deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyapp
  labels:
    app: npapp
spec:
  replicas: 3
  minReadySeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1          
  selector:
    matchLabels:
      app: npapp
  template:
    metadata:
      name: npapp
      labels:
        app: npapp 
    spec:
      containers:
      - name: myapp-cont
        image: lerndevops/samplepyapp:v2
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: pyapp
spec:
  type: LoadBalancer
  selector:
    app: npapp
  ports:
   - protocol: TCP
     port: 80
     targetPort: 3000
     nodePort: 30005
